--- a/glorify-meteor.less
+++ b/glorify-meteor.less
@@ -1,4 +1,13 @@
 /* CSS declarations go here */
+.well-sm {
+  font-size: 13px;
+  padding: 0.5em;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+.well-dark {
+  background: #23241f;
+  color: white;
+}
 .footer {
   text-align: center;
   margin: 10px 0;
